# VimAbl

./: .envrc  .gitignore  .mcp.json  GEMINI.md  INTEGRATION_PLAN.md  Log.txt  README.md  REFACTORING_SUMMARY.md  REMOTE_SCRIPT_OBSERVERS.md  SETUP.md  SVELTE_TREEVIEWER.md  TESTING.md  TODO.md  inspect_phase1b.py  main.py  mkdocs.yml  pyproject.toml  requirements.txt  test_hammerspoon_ws.sh  test_phase1b.py  test_websocket.py
.claude/: README.md
.claude/agents/: docs-agent.md
.claude/commands/: doc-feature.md  (+4 more)
.gemini/: settings.json
.github/: README.md
.serena/: project.yml
docs/: CLIPSLOT_OBSERVABLE_PROPERTIES.md  CLIP_SLOT_MATRIX_IMPLEMENTATION.md  CURSOR_EVENT_SCHEMA.json  ESTABLISHED_OBSERVERS.md  MANUAL_TESTING_UDP_OSC.md  PHASE_5F_COMPLETE.md  README.md  SESSION_SUMMARY_2025-11-12.md  SESSION_SUMMARY_2025-11-12_part2.md  TESTING_UDP_OSC.md  UDP_OSC_PROGRESS.md  changelog.md  contributing.md  faq.md  index.md  installation.md  phase12a-backend-diff-batching.md  phase12a-batched-reactivity.md  phase12a-node-index-optimization.md  planned-features.md  quick-start.md  troubleshooting.md
site/: 404.html  index.html  sitemap.xml
src/: main.py
tests/: README.md  __init__.py  test_fallback.py  test_full_insertion_flow.py  test_integration.py  test_scene_insertion_logic.py  test_scene_insertion_uuid.py  test_scene_removal_logic.py  test_udp_stress.py
tools/: check_clip_slot_duplicates.py  extract_commands.py  extract_keybindings.py  extract_observers.py  monitor_ws.py  simulate_file_change.py  test_diff_preservation.md  test_udp_manual.py  test_udp_osc.py
(+148 files in other folders)
